增加数据库和webview

--- a/GaoNews/app/src/main/res/layout/activity_home.xml
+++ b/GaoNews/app/src/main/res/layout/activity_home.xml
@@ -5,15 +5,43 @@
     android:id="@+id/activity_home"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.feicui.gaonews.activity.HomeActivity">
+
+    <RelativeLayout
+        android:id="@+id/biaoti"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:background="#3333ff"
+        android:layout_alignParentTop="true">
+
+        <TextView
+            android:id="@+id/tv_listTitle"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:ellipsize="marquee"
+            android:layout_centerVertical="true"
+            android:focusable="true"
+            android:focusableInTouchMode="true"
+            android:marqueeRepeatLimit="marquee_forever"
+            android:lines="1"
+            android:scrollHorizontally="true"
+            android:text="新闻 新闻  新闻  新闻  新闻 新闻  新闻  新闻  新闻 新闻  新闻  新闻"
+            android:textSize="22sp"/>
+
+
+    </RelativeLayout>
+
 
     <ListView
         android:id="@+id/lv_news"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"></ListView>
+        android:layout_height="match_parent"
+        android:layout_below="@+id/biaoti"
+        android:paddingBottom="10dp"
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp">
+
+    </ListView>
+
 
 </RelativeLayout>
