--- a/GaoNews/app/src/main/res/layout/layout_news_listview_item.xml
+++ b/GaoNews/app/src/main/res/layout/layout_news_listview_item.xml
@@ -3,31 +3,50 @@
                 android:layout_width="match_parent"
                 android:layout_height="60dp">
 
-
-    <TextView
-        android:id="@+id/tv_title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignTop="@+id/im_icon"
-        android:layout_centerVertical="true"
-        android:layout_toRightOf="@+id/im_icon"
-        android:text="标题"/>
-
-    <TextView
-        android:id="@+id/tv_summay"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/tv_title"
-        android:layout_centerVertical="true"
-        android:layout_toRightOf="@+id/im_icon"
-        android:text="摘要"/>
-
     <ImageView
         android:id="@+id/im_icon"
         android:layout_width="60dp"
+        android:scaleType="centerCrop"
         android:layout_height="60dp"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
+        android:layout_centerVertical="true"
         android:src="@mipmap/ic_launcher"/>
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_toRightOf="@+id/im_icon"
+         >
+
+        <TextView
+            android:id="@+id/tv_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+
+            android:text="标题"/>
+
+        <TextView
+            android:id="@+id/tv_summay"
+            android:layout_below="@+id/tv_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:lines="1"
+            android:ellipsize="end"
+            android:layout_centerVertical="true"
+            android:text="摘要"/>
+
+
+        <TextView
+            android:id="@+id/tv_listTime"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/tv_summay"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentRight="true"
+            android:text="时间"/>
+    </RelativeLayout>
+
 </RelativeLayout>
